    * FIX: animation of rotation treeangle in trees works again
    * FIX: Logwatch: Changed font color back to black
    * FIX: show toggle button for checkboxes in deactivated state
    * FIX: fix repeated stacked refresh when toggling columns
    * FIX: disable checkbox button in non-checkboxable layouts
    * FIX: fix table layout for views (gaps where missing sometimes)

    Mobile:
    * FIX: Fixed logtime filter settings in all mobile views
    * FIX: fix some layout problems

    BI:
    * New aggregation function count_ok, that counts the number
      of nodes in state OK.
    * FIX: Removed debug output int count_ok aggregation
    * FIX: fixed box layout with omitted root (was sometimes invisible)

    Checks & Agents:
    * Linux: Modified cluster section to allow pacemaker/corosync clusters without heartbeat
    * AIX: convert NIC check to lnx_if (now being compatible with if/if64)
    * AIX: new check for CPU utilization (using section lparstat_aix)

1.2.0b4:
    Core:
    * New configuration variable snmp_timing, allowing to 
      configure timeout and retries for SNMP requests (also via WATO)
    * New configuration variable custom_checks. This is mainly for
      WATO but also usable in main.mk It's a variant of legacy_checks that
      automatically creates the required "define command" sections.

    WATO:
    * ps and ps.perf configurable via WATO now (without inventory)
    * New layout of main menu and a couple of other similar menus
    * New layout of ruleset overviews
    * Hide check_mk variable names per default now (change via global settings)
    * New layout of global settings
    * Folder layout: show contact groups of folder
    * Folder movement: always show complete path to target folder
    * Sidebar snapin: show pending changes
    * New rule for configuring custom_checks - allowing to run arbitrary
      active checks even if not yet formalized (like HTTP and TCP)
    * Added automation_commands to make automations pluginable