@@ -157,13 +157,7 @@ declare_1to1_sorter("svc_group_memberlist",       cmp_string_list)
 declare_1to1_sorter("svc_acknowledged",           cmp_simple_number)
 
 def cmp_perfdata_nth_value(r1, r2, n):
-    def saveint(s):
-        # Change None or empty strings to -1 to make these lines
-        # appear below the lines with a value of 0
-        if s is None or s == '':
-            return -1
-        return int(s)
-    return cmp(saveint(get_perfdata_nth_value(r1, n)), saveint(get_perfdata_nth_value(r2, n)))
+    return cmp(savefloat(get_perfdata_nth_value(r1, n)), savefloat(get_perfdata_nth_value(r2, n)))
 
 multisite_sorters['svc_perf_val01'] = {
     "title"   : _("Service performance data - value number %02d") % 1,
